[package]
name = "aambient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
display-info = "0.4.1"
nokhwa = "0.10.3"
screenshots = "0.8.2"
async-trait = "0.1.72"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
tokio = { version = "1.29.1", features = ["full"] }
